@@ -348,6 +348,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5607: fixed Distutils test_get_platform for Mac OS X fat binaries.
+
 - Issue #5732: added a new command in Distutils: check.
 
 - Issue #5731: Distutils bdist_wininst no longer worked on non-Windows 
